Fix align in css

--- a/html/odmb/main.css
+++ b/html/odmb/main.css
@@ -36,7 +36,7 @@ iframe#footerframe{
 }
 
 .header ul{
-    align: center;
+    text-align: center;
     font-size: 15px;
     padding-left: 5px;
     margin-left: 0px;
